# TrabajoIS

./: CMakeLists.txt  README.md
CODE CORDOBA/: Eventos_Copia.txt  Usuarios.txt  Usuarios_Copia.txt  readme.txt
src/: CMakeLists.txt  main.cc
src/directorAcademico/: CMakeLists.txt  directorAcademico.cc  directorAcademico.h
src/evento/: CMakeLists.txt  evento.cc  evento.h
src/global/: CMakeLists.txt  global.h
src/menu_director/: CMakeLists.txt  menu_director.cc  menu_director.h
src/menu_organizador/: CMakeLists.txt  menu_organizador.cc  menu_organizador.h
src/menu_user/: CMakeLists.txt  menu_user.cc  menu_user.h
src/menus/: CMakeLists.txt  menus.h
src/organizador/: CMakeLists.txt  organizador.cc  organizador.h
src/programa/: CMakeLists.txt  programa.h
src/user/: CMakeLists.txt  user.h
src/userManager/: CMakeLists.txt  userManager.h
tests/: CMakeLists.txt  README.txt  organizador-test.cc  user-test.cc  userManager-test.cc
